Removed http:// from links shown in domain cards

--- a/_includes/card-domain.html
+++ b/_includes/card-domain.html
@@ -2,7 +2,7 @@
     <div class="content">
         <strong>{{ include.domain.name }}</strong> <br />
         <div class="card__url--domain">
-            <a href="{{ include.domain.url }}">{{ include.domain.url }}</a>
+            <a href="http://{{ include.domain.url }}">{{ include.domain.url }}</a>
         </div>
         <div class="tags">
             {% for tag in include.domain.tags %}
