--- a/_includes/our-domains.html
+++ b/_includes/our-domains.html
@@ -8,10 +8,13 @@
             {% include card-domain.html domain=domain %}
             {% endfor %}
         </div>
-        <article class="message message--domain">
-            <div class="message-body">
-                If you are interested in buying any of the above domains, feel free to <a href="mailto://{{ site.mailid }}">contact us</a> any time! 😃
-            </div>
-        </article>
+        <div class="has-text-centered">
+            <article class="message message--domain">
+                <div class="message-body content">
+                    <p class="title is-4">Interested In Buying One?</p>
+                    <p class="subtitle">Feel free to <a href="mailto://{{ site.mailid }}">contact us</a>! 😃</p>
+                </div>
+            </article>
+        </div>
     </div>
 </div>
