--- a/_includes/what-we-do.html
+++ b/_includes/what-we-do.html
@@ -1,9 +1,9 @@
 <section class="section">
     <div class="container has-text-centered">
         <h1 class="title">What We Do</h1>
-        <div class="columns is-multiline">
+        <div class="columns is-multiline is-centered">
             {% for skill in site.data.skills %}
-            <div class="column is-3 item--skill">
+            <div class="column is-3 item--skill card--skill">
                 {% include item-skill.html skill=skill %}
             </div>
             {% endfor %}
