Updated the skill card shape

--- a/_includes/item-skill.html
+++ b/_includes/item-skill.html
@@ -1,4 +1,4 @@
-<div>
+<div class="is-inline-block card--skill">
     <div class="item__icon--skill">
         <figure class="image is-64x64 is-inline-block">
             {{ site.data.icons[include.skill.icon] }}
