--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -57,7 +57,8 @@ $body-background-color: $lightgrey;
 
 .card--skill {
     transition: box-shadow .3s;
-    margin: 0 $gap/4 0 0;
+    padding: 0.75*$gap;
+    border-radius: 0.5rem;
 
     &:hover {
         box-shadow: 0 0.5rem 1.5rem rgba(10,10,10,0.1), 0 0 0 1px rgba(10,10,10,0.1); 
@@ -88,11 +89,11 @@ $body-background-color: $lightgrey;
 }
 
 .item--skill {
-    margin: 3rem 2rem;
+    margin: 0.5rem;
 }
 
 .item__icon--skill {
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
 }
 
 .section__title {
