Removed unwanted CSS, disabled widescreen, reduced size of icons

--- a/_includes/item-skill.html
+++ b/_includes/item-skill.html
@@ -1,6 +1,6 @@
-<div class="is-inline-block card--skill">
+<div class="card--skill">
     <div class="item__icon--skill">
-        <figure class="image is-64x64 is-inline-block">
+        <figure class="image is-32x32 is-inline-block">
             {{ site.data.icons[include.skill.icon] }}
         </figure>
     </div>
