--- a/_includes/our-domains.html
+++ b/_includes/our-domains.html
@@ -12,7 +12,7 @@
             <article class="message message--domain">
                 <div class="message-body content">
                     <p class="title is-4">Interested In Buying One?</p>
-                    <p class="subtitle">Feel free to <a href="mailto://{{ site.mailid }}">contact us</a>! 😃</p>
+                    <p class="subtitle">Feel free to <a href="mailto://{{ site.email }}">contact us</a>! 😃</p>
                 </div>
             </article>
         </div>
