Removed debounce for image loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,8 @@
     echo.init({
       offset: 100,
       throttle: 250,
-      unload: false
+      unload: false,
+      debounce: false
     });
   </script>
 </body>
