Added Google Analytics

--- a/_includes/our-past-works.html
+++ b/_includes/our-past-works.html
@@ -4,7 +4,7 @@
       <h1 class="title">Our Past Works</h1>
     </div>
     <div class="content has-text-centered">
-      <p>Take a look at some of the work we did in the past, done with seriousness and motivation. Do <a href="mailto://{{ site.email }}">drop us a mail</a> what you think of them 😃 </p>
+      <p>Take a look at some of the work we did in the past, done with seriousness and motivation. Do <a href="mailto://{{ site.email }}" onclick="onContactClick()">drop us a mail</a> what you think of them 😃 </p>
       <br><br>
       <a href="/our-works.html" class="button is-primary is-large">View Our Past Works</a>
     </div>
