--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <span class="navbar-item">
-        <a class="button is-primary" href="mailto://{{ site.email }}">
+        <a class="button is-primary" onclick="onContactClick()" href="mailto://{{ site.email }}">
           Contact
         </a>
       </span>
