--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,18 @@
 
 <head>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132863095-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+  
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', '{{ site.google-analytics-id }}');
+    </script>
+
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -42,6 +54,14 @@
       unload: false,
       debounce: false
     });
+
+    function onContactClick() {
+      gtag('event', 'click', {
+        'event_category': 'contact',
+        'event_label': 'mail',
+        'event_value': 1
+      });
+    }
   </script>
 </body>
 
